# rust-template

./: Cargo.toml  LICENSE-APACHE  LICENSE-GPL  LICENSE-MIT  README.md  cargo-generate.toml  channel.rhai  flake.nix  license.rhai  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
