[workspace]
resolver = "2"
members = [
#  "crates/*",
]

[workspace.package]
authors = ["{{author}}"]
version = "0.1.0"
edition = "2021"

[package]
name = "{{crate_name}}"
authors.workspace = true
description = "{{description}}"
repository = "https://github.com/{{author}}/{{crate_name}}"
version.workspace = true
edition.workspace = true


[profile.release]
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"
debug = false
panic = "abort"
strip = "debuginfo"

[profile.release.package."*"]
opt-level = 3


[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256
lto = false
debug = 1

[profile.dev.package."*"]
opt-level = 3


[profile.bench]
incremental = true
codegen-units = 256


[profile.debugger]
inherits = "dev"
debug = 2
