[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.package]
authors = ["{{author}}"]
version = "0.1.0"
{%- if toolchain == "nightly" %}
edition = "2024"
{%- else %}
edition = "2021"
{%- endif %}


[package]
name = "{{project-name}}"
authors.workspace = true
description = "{{description}}"
repository = "https://github.com/{{author}}/{{project-name}}"
version.workspace = true
edition.workspace = true
